Add custom fonts

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -38,6 +38,8 @@
     color: black;
     font-size: 25px;
     border-bottom: 1px solid #dfdfdf;
+    font-family: 'nobileregular', sans-serif;
+    font-weight: bold;
 }
 
 header {
@@ -47,3 +49,13 @@ header {
 hr {
     clear: both;
 }
+
+h1 {
+    font-family: 'nobileregular', sans-serif;
+    font-weight: bold;
+  }
+  
+  h2 {
+    font-family: 'nobilemedium_italic', sans-serif;
+    font-size: 48px;
+  }
